--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "NODE_ENV=production concurrently \"next start\" \"json-server --watch db.json --port 3001\"",
+    "start": "NODE_ENV=production concurrently \"node server.js\" \"json-server --watch db.json --port 3001\"",
     "lint": "next lint",
     "json-server": "json-server ./data/db.json --port 3001"
   },
